repositorio actualizado con cambios en el frontend del sidebar y frontend de visualizar tareas

--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,8 @@
     },
     "authors": [
         {
-            "name": "ariel",
-            "email": "201710012@est.umss.edu"
+            "name": "Ariel",
+            "email": "arieldelgadillo444@gmail.com"
         }
     ],
     "require": {}
